# peakquiz

./: .gitignore  Dockerfile  README.md  Taskfile.yaml  docker-compose.yml  manage.py  poetry.toml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
backend/: .dockerignore  Dockerfile  peakquiz.db  pyproject.toml  requirements.txt  wsgi.py
backend/app/: main.py
backend/app/api/routes/: admin.py  auth.py  profile.py  quiz.py  rankings.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  models.py
backend/app/schemas/: admin.py  profile.py  quiz.py  user.py
backend/app/utils/: media.py  wikimedia.py
backend/scripts/: manage_pictures.py  upload_missing_cdn_images.py
backend/tests/: conftest.py  test_admin.py  test_picture_selection.py  test_profile.py  test_quiz.py  test_rankings.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  constants.js  main.jsx
frontend/src/components/: AnswerOption.module.css  AnswerOption.tsx  Footer.module.css  Footer.tsx  LeaderboardTable.module.css  LeaderboardTable.tsx  Navigation.module.css  Navigation.tsx  Timer.module.css  Timer.tsx
frontend/src/components/AnswerTimer/: AnswerTimer.jsx  AnswerTimer.scss
frontend/src/components/Quiz/: Quiz.jsx  Quiz.scss
frontend/src/components/Result/: Result.jsx  Result.scss
frontend/src/hooks/: useAuth.ts  useQuiz.ts  useTranslation.ts
frontend/src/i18n/: translations.ts
frontend/src/pages/: AdminPage.module.css  AdminPage.tsx  CategoryPage.module.css  CategoryPage.tsx  LandingPage.module.css  LandingPage.tsx  LeaderboardPage.module.css  LeaderboardPage.tsx  ProfilePage.module.css  ProfilePage.tsx  QuizPage.module.css  QuizPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: global.css  index.scss  tokens.css  vars.scss
frontend/src/types/: index.ts
frontend/src/utils/: cloudinary.ts
peakquiz/: admin.py  api.py  asgi.py  models.py  schemas.py  settings.py  urls.py  views.py  wsgi.py
peakquiz/management/commands/: importpeaks.py
peakquiz/migrations/: 0001_initial.py  0002_alter_peak_dominance_peak_alter_peak_prominence_peak.py  0003_alter_peak_aliases_alter_peak_dominance_distance_and_more.py
peakquiz/templates/: base.html
