[tool.poetry]
name = "peakquiz"
version = "0.1.0"
description = "Webapp for getting quizzed on mountain peaks"
authors = ["Stefan Schneider <mail@stefanschneider.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
django = "5.2.4"
django-compressor = "^4.5.1"
pytest = "^8.4.1"
openpyxl = "^3.1.5"
requests = "^2.32.4"
django-stubs = "^5.2.1"
django-ninja = "^1.4.3"
django-cors-headers = "^4.7.0"
python-dotenv = "^1.1.1"
cloudinary = "^1.44.1"


[tool.poetry.group.dev.dependencies]
django-pytest = "^0.2.0"
mypy = "^1.17.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
