[project]
name = "peakquiz-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "authlib==1.3.2",
    "httpx==0.27.2",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.5.2",
    "itsdangerous==2.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "pyright>=1.1.408",
    "mypy>=1.20.1",
    "types-python-jose>=3.5.0.20260408",
    "types-authlib>=1.6.10.20260414",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false
