[project]
name = "peakquiz-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "authlib==1.3.2",
    "httpx==0.27.2",
    "python-jose[cryptography]==3.3.0",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.5.2",
    "itsdangerous==2.2.0",
    "a2wsgi>=1.10.10",
    "load-dotenv>=0.1.0",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "pyright>=1.1.408",
    "mypy>=1.20.1",
    "types-python-jose>=3.5.0.20260408",
    "types-authlib>=1.6.10.20260414",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "B008",  # FastAPI uses function calls (Depends) in default arguments
]

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.uv]
package = false
